--- a/assets/css/utilities/layout.scss
+++ b/assets/css/utilities/layout.scss
@@ -26,3 +26,9 @@
     }
   }
 }
+
+.mobile\: {
+  @include mobile {
+    &w-100 { width: 100%; }
+  }
+}
